change game server online mode to be a configuration option

--- a/config-example.json
+++ b/config-example.json
@@ -5,6 +5,7 @@
     "onlineMode": true,
     "targetHost": "192.0.2.43",
     "targetPort": 26666,
+    "targetOnline": true,
     "webServicePort": 24464,
     "maxPlayers": 1,
     
