--- a/config-example.json
+++ b/config-example.json
@@ -1,5 +1,6 @@
 {
     "serverVersion": "1.17.1",
+    "enforceServerVersion": false,
     "serverHost": "0.0.0.0",
     "serverPort": 25565,
     "onlineMode": true,
@@ -7,7 +8,10 @@
     "targetPort": 26666,
     "targetOnline": true,
     "webServicePort": 24464,
-    "maxPlayers": 1,
+    "maxPlayers": 12,
+
+    "connectionThrottleMs": 4000,
+    "connectionsPerIP": 2,
     
     "queueEnabled": true,
     "queueWorldTime": 13000,
@@ -30,6 +34,7 @@
     "disconnectedMessage": "Disconnected from server.",
     "serverFullMessage": "Server is full.",
     "anotherLocationMessage": "You logged in from another location.",
+    "tooManyConnectionsMessage": "You are connected from too many accounts.",
     "notWhitelistedMessage": "You are not whitelisted on this server.",
     "unsupportedVersionMessage": "Minecraft version unsupported.",
     "positionInQueueColor": "light_purple",
