add new entries to config example/readme, fix connection throttle bug

--- a/config-example.json
+++ b/config-example.json
@@ -34,7 +34,8 @@
     "disconnectedMessage": "Disconnected from server.",
     "serverFullMessage": "Server is full.",
     "anotherLocationMessage": "You logged in from another location.",
-    "tooManyConnectionsMessage": "You are connected from too many accounts.",
+    "tooManyConnectionsMessage": "You have too many open connections!",
+    "connectionThrottledMessage": "Connection throttled! Please wait a moment and try again.",
     "notWhitelistedMessage": "You are not whitelisted on this server.",
     "unsupportedVersionMessage": "Minecraft version unsupported.",
     "positionInQueueColor": "light_purple",
