add toggleable player list in MOTD

--- a/config-example.json
+++ b/config-example.json
@@ -25,7 +25,9 @@
     ],
     "knownMotds": [],
     "showPlayerCount": false,
+    "showPlayers": false,
     "knownShowPlayerCount": true,
+    "knownShowPlayers": false,
     "queueInPlayerCount": true,
     "legacyMotdMessage": "A Minecraft Proxy Server",
     
