user whitelist support

--- a/config-example.json
+++ b/config-example.json
@@ -12,6 +12,7 @@
 
     "connectionThrottleMs": 4000,
     "connectionsPerIP": 2,
+    "whitelistEnabled": false,
     
     "queueEnabled": true,
     "queueWorldTime": 13000,
